[gd_scene load_steps=3 format=2]

[ext_resource path="res://Utils/Controllers/CutSceneController.gd" type="Script" id=1]
[ext_resource path="res://Utils/Overlap/DetectionZone.tscn" type="PackedScene" id=2]

[node name="CutSceneController" type="Node2D"]
script = ExtResource( 1 )

[node name="DetectionZonePivot" parent="." instance=ExtResource( 2 )]

[node name="Tween" type="Tween" parent="."]

[node name="Timer" type="Timer" parent="."]

[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[editable path="DetectionZonePivot"]
